# pylint-json2html

./: .gitignore  MANIFEST.in  Makefile  README.md  README.rst  pylint_json2html.py  requirements.txt  setup.cfg  setup.py
pylint_json2html/: __init__.py
pylint_json2html/templates/: report.jinja2
templates/: report.jinja2
tests/: craps.py  other.py  template.jinja
