[metadata]
name = pylint-json2html
version = 0.2.2
author = Florian Strzelecki
author_email = florian.strzelecki@gmail.com
url = https://github.com/Exirel/pylint-json2html
description = Pylint JSON report to HTML
long_description = file: README.rst
license = MPL-2.0
keywords = pylint report quality
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Quality Assurance

[options]
packages = find:
zip_safe = false
include_package_data = true
install_requires =
    pylint
    Jinja2

[options.entry_points]
console_scripts =
    pylint-json2html = pylint_json2html:main

[flake8]
max-line-length = 79
exclude = docs/*,tests/*

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = pylint_json2html, tests
multi_line_output = 3
not_skip = __init__.py
line_length = 79
