[metadata]
name = pylint-json2html
version = 0.4.0
author = Florian Strzelecki
author_email = florian.strzelecki@gmail.com
url = https://github.com/Exirel/pylint-json2html
description = Pylint JSON report to HTML
long_description = file: README.md
long_description_content_type = text/markdown
license = MPL-2.0
keywords = pylint report quality
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Quality Assurance

[options]
packages = find:
zip_safe = false
include_package_data = true
install_requires =
    pylint>=3.0
    Jinja2

[options.entry_points]
console_scripts =
    pylint-json2html = pylint_json2html:main

[flake8]
max-line-length = 79
exclude = docs/*,tests/*

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = pylint_json2html, tests
multi_line_output = 3
line_length = 79
